Sat Mar 05 02:50:04 GMT 2011  Olly Betts <olly@survex.com>

	* docs/replication.rst: Mention new defaulting of -m.

Sat Mar 05 02:44:37 GMT 2011  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: If --master isn't specified, default to
	  DATABASE.

Sat Mar 05 00:14:21 GMT 2011  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: Give an error if the host isn't set, rather
	  than trying to connect to an empty hostname, which gives the error
	  "Couldn't resolve host  (Unknown server error)", which might confuse
	  if you fail to notice the double space and realise what it means.

Fri Mar 04 17:20:13 GMT 2011  Richard Boulton <richard@tartarus.org>

	* docs/replication.rst: Update documentation to make it clear that
	  users shouldn't try to create the destination directory for
	  replication themselves.

Thu Mar 03 11:10:10 GMT 2011  Olly Betts <olly@survex.com>

	* docs/intro_ir.html: Fix typo in author's name.

Thu Mar 03 11:06:30 GMT 2011  Olly Betts <olly@survex.com>

	* docs/intro_ir.html: Update link to a paper.  Update text about book
	  "to be published in 2008".

Tue Mar 01 11:39:40 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Mon Feb 28 12:40:24 GMT 2011  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Avoid leaking postlist tree if an exception
	  is thrown during the match.

Wed Feb 23 15:26:56 GMT 2011  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/index.html: Process collapsing.rst and link
	  it into the documentation.

Wed Feb 23 15:22:06 GMT 2011  Olly Betts <olly@survex.com>

	* docs/collapsing.rst: Add missing document (for some reason this file
	  was empty in SVN, but present in my tree under a different name, and
	  not checked in).

Mon Feb 21 14:49:06 GMT 2011  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Deprecate MSet.items and ESet.items.

Mon Feb 21 14:06:21 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc,backends/chert/chert_database.cc,